[tool.poetry]
name = "repl_python3_beta_ChomperSpanishBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
regex = "^2021.9.24"
replit = "^3.2.4"
lookup = "^0.2"
Flask = "^2.0.1"
psycopg = "^3.0b1"
config = "^0.5.1"
schedule = "^1.1.0"
timedelta = "^2020.12.3"
exp = "^0.5.1"
pragma = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
